Cleaned up the code, deleted unused code
