# spatial-api-spec.yaml
@@ -13,6 +13,39 @@ servers:
   - url: 'https://spatial.api.hubmapconsortium.org'
 
 paths:
+  '/db/rebuild/annotation-details':
+    put:
+      summary: Rebuild the tables containing the annotation details
+      operationId: db_rebuild_annotation_details
+      responses:
+        '200':
+          description: Processed
+  '/samples/extracted-cell-type-counts-from-secondary-analysis-files':
+    put:
+      summary: The sample cell type counts are returned by ingest-api
+      operationId: samples_extracted_cell_type_counts_from_secondary_analysis_files
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ExtractedCellTypeCountsRequest'
+      responses:
+        '202':
+          description: Accepted for Processing
+  '/samples/sample_uuid/{sample_uuid}/reindex':
+    put:
+      summary: Delete the old sample information and replace it by processing the current data
+      operationId: samples_sample_uuid_reindex
+      responses:
+        '202':
+          description: Accepted for Processing
+  '/samples/organ_code/<organ_code>/reindex':
+    put:
+      summary: Delete all old samples associated with the organ and replace by processing current sample data for that organ
+      operationId: samples_organ_code_reindex
+      responses:
+        '202':
+          description: Accepted for Processing
   '/search/hubmap-id/{hubmap_id}/radius/{radius}/target/{target}':
     get:
       summary: List the hubmap_ids associated with the target body that are located within the radius of the centroid of the hubmap_id specified
@@ -101,49 +134,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/StatusResponse'
-  '/sample/begin-extract-cell-type-counts-for-all-samples-for-organ-code':
-    put:
-      summary: Ask ingest-api to begin computations on cell type count information
-      operationId: begin_extract_cell_type_counts_for_all_samples_for_organ_code
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BeginCellTypeCountRequest'
-      responses:
-        '202':
-          description: Accepted for Processing
-  '/sample/extracted-cell-type-counts-from-secondary-analysis-files':
-    put:
-      summary: The sample cell type counts are returned by a thread processing them from a queue
-      operationId: sample_extracted_cell_type_counts_from_secondary_analysis_files
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ExtractedCellTypeCountsRequest'
-      responses:
-        '202':
-          description: Accepted for Processing
-  '/db/rebuild/annotation-details':
-    put:
-      summary: Rebuild the tables containing the annotation details
-      operationId: db_rebuild_annotation_details
-      responses:
-        '200':
-          description: Processed
-  '/db/rebuild/organ-sample-data':
-    put:
-      summary: Rebuild the sample data for the organ code given
-      operationId: db_rebuild_organ_sample_data
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BeginCellTypeCountRequest'
-      responses:
-        '200':
-          description: Done
 components:
   schemas:
     HubMAPIds:
@@ -188,6 +178,14 @@ components:
         z:
           type: number
           example: 20
+    ExtractedCellTypeCountsRequest:
+      type: object
+      properties:
+        sample_uuid:
+          type: string
+          example: 1.0.0
+        cell_type_counts:
+          type: object
     StatusResponse:
       type: object
       properties:
@@ -197,17 +195,6 @@ components:
         build:
           type: string
           example: build
-    BeginCellTypeCountRequest:
-      type: object
-      properties:
-        organ_code:
+        database_connection:
           type: string
-          example: RK
-    ExtractedCellTypeCountsRequest:
-      type: object
-      properties:
-        sample_uuid:
-          type: string
-          example: 1.0.0
-        cell_type_counts:
-          type: object
+          example: True
